--- a/src/scss/pages/_common.scss
+++ b/src/scss/pages/_common.scss
@@ -86,12 +86,23 @@ body  {
 
 h1, .h1 {
   font-family: $font-family-she-always-walks-alone;
+  font-size: 4.4rem;
   margin-bottom: 0;
+  margin-top: 4rem;
 }
+
 
 h2, .h2 {
   font-family: $font-family-she-always-walks-alone;
-  margin-bottom: 0;
+  font-size: 5rem;
+  line-height: 1.2;
+}
+
+
+h3, .h3 {
+  font-family: $font-family-work-sans-light;
+  font-size: 1.6rem;
+  line-height: 1.2;
 }
 
 // base styles end --------------------------------
@@ -106,37 +117,51 @@ h2, .h2 {
 
 
 // main container end --------------------------------
+
+
 %article-wrapper {
   height: 100vh;
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .article-header {
-  width: 50%;
-  height: 100%;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
+  margin-top: 4rem;
+}
+
+.article-footer {
+  text-align: center;
 }
 
 .article-body {
-  width: 50%;
-  height: 100%;
-  background-color: white;
+  display: flex;
+  align-items: center;
+}
+
+.article-header-title {
+  font-family: $font-family-she-always-walks-alone;
+  font-size: 2.4rem;
+  line-height: 1;
+  display: block;
+}
+
+.article-header-sub-title {
+  font-family: $font-family-work-sans-light;
+  font-size: 1.6rem;
+  line-height: 1.2;
+  display: block;
 }
 
 .article-title-wrapper {
   text-align: center;
-  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 32%;
+  margin: auto;
 }
 
-.article-nav {
-}
 
 .article-title-img {
   width: 100%;
@@ -146,54 +171,67 @@ h2, .h2 {
 .article-title-img-wrapper {
   width: 100%;
   max-width: 300px;
-  margin-bottom: 6rem;
 }
+
+.article-nav {
+  margin-bottom: 1rem;
+  margin-top: auto;
+  text-align: center;
+}
+
+
+// intro --------------------------------
 
 #intro {
   @extend %article-wrapper;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: -1;
-
 
   & .article-header {
-    z-index: 1;
-    position: absolute;
-    background-color: transparent;
-    width: 100%;
-    right: 0;
+    margin-top: auto;
   }
+
+
+  & .article-footer {
+    margin-top: auto;
+  }
+
 
   & .article-title-wrapper {
     width: 27%;
   }
 
+
   & .article-title-img-wrapper {
-    max-width: 400px;
+    max-width: 360px;
+    margin-bottom: 2rem;
   }
 
 
-  h2, .h2 {
-    font-family: $font-family-work-sans-thin;
-    font-size: 3.6rem;
+  & .article-header-title {
+    font-size: 4.6rem;
     line-height: 1.2;
   }
-}
 
-#intro-video {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  z-index: -1;
-  transform: translateY(-50%) translateX(-50%);
-  background: url('/img/intro.jpg') no-repeat;
-  background-size: cover;
+
+  & .article-header-sub-title {
+    font-family: $font-family-work-sans-thin;
+    font-size: 3rem;
+    line-height: 1.2;
+  }
+
+
+  & .article-video {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -1;
+    transform: translateY(-50%) translateX(-50%);
+    //background: url('/img/intro.jpg') no-repeat;
+    background-size: cover;
+  }
 }
 
 //#intro-code {
@@ -209,105 +247,267 @@ h2, .h2 {
 //  padding: 40px;
 //}
 
+// intro end --------------------------------
+
+
+
+// skills  --------------------------------
+
 #skills {
   @extend %article-wrapper;
-  margin-top: 100vh;
+  background-color: rgba(255,255,255,0.7);
 
-  & .article-header {
-    background-color: #F3DB5F;
-  }
-
-  & .article-body {
-    background-color: rgba(255,255,255,0.70);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: black;
-  }
 
   & .article-title-wrapper {
-    width: 33%;
+    width: 30%;
+    padding-left: 15%;
+
+    & .article-title-img-wrapper {
+      max-width: 250px;
+    }
   }
 
-  & .article-title-img-wrapper {
-    max-width: 250px;
-  }
 
-  & figure {
-    margin-bottom: 5rem;
+  & .article-img-wrapper {
+    width: 40%;
     position: relative;
+
+    & .article-img,
+    & .article-img-overlay {
+      width: 80%;
+      max-width: 550px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translateX(-50%) translateY(-50%);
+
+      & path {
+        animation-name: rotating;
+        transform-origin: 50% 50%;
+      }
+    }
   }
 
-  & figcaption {
-    text-align: center;
-  }
 
-  & p {
-    margin-bottom: 0;
-  }
+  & .article-content-wrapper {
+    width: 30%;
+    padding-right: 17%;
 
-  & span {
-    color: rgba(0,0,0,0.3);
+    & p {
+      margin-bottom: 0;
+      text-align: center;
+
+      & span {
+        color: rgba(0,0,0,0.3);
+      }
+    }
   }
 }
 
-#skills-list-img {
-  width: 100%;
-  max-width: 450px;
-  margin-bottom: 5rem;
+// skills end --------------------------------
 
-  & path {
-    animation-name: rotating;
-    transform-origin: 50% 50%;
-  }
-}
 
-#skills-cogwheels {
-  @extend #skills-list-img;
-  display: block;
-  position: absolute;
-  top: 0;
-}
+
+// portfolio --------------------------------
 
 #portfolio {
   @extend %article-wrapper;
+  background-color: white;
 
-  & .article-header {
-    background-color: #fff;
+
+  & .article-title-wrapper {
+    width: 25%;
+
+    & .article-title-img-wrapper {
+      width: 70%;
+      max-width: 300px;
+    }
+  }
+
+
+  & .article-body {
+    height: 85%;
+  }
+
+
+  & .article-content-wrapper {
+    width: 75%;
+    overflow-y: scroll;
+    max-height: 100%;
+
+    & p {
+      margin-bottom: 0;
+      text-align: center;
+
+      & span {
+        color: rgba(0,0,0,0.3);
+      }
+    }
   }
 }
 
+// portfolio end --------------------------------
+
 #experience {
   @extend %article-wrapper;
+  background-color: #F7F5E5;
 
-  & .article-header {
-    background-color: #f67065;
+
+  & .article-title-wrapper {
+    width: 25%;
+
+    & .article-title-img-wrapper {
+      width: 70%;
+      max-width: 300px;
+    }
   }
 
-  & .article-title-img {
-    position: relative;
-    left: -20%;
+
+  & .article-body {
+    height: 85%;
+  }
+
+
+  & .article-content-wrapper {
+    width: 75%;
+    overflow-y: scroll;
+    max-height: 100%;
+
+    & p {
+      margin-bottom: 0;
+      text-align: center;
+
+      & span {
+        color: rgba(0,0,0,0.3);
+      }
+    }
+  }
+}
+
+#about {
+  @extend %article-wrapper;
+  background-color: white;
+
+
+  & .article-title-wrapper {
+    width: 25%;
+
+    & .article-title-img-wrapper {
+      width: 70%;
+      max-width: 300px;
+    }
+  }
+
+
+  & .article-body {
+    height: 85%;
+  }
+
+
+  & .article-content-wrapper {
+    width: 75%;
+    overflow-y: scroll;
+    max-height: 100%;
+
+    & p {
+      margin-bottom: 0;
+      text-align: center;
+
+      & span {
+        color: rgba(0,0,0,0.3);
+      }
+    }
   }
 }
 
 
 #contact {
   @extend %article-wrapper;
+  background-color: #E7F3ED;
 
-  & .article-header {
-    background-color: #9bceb3;
-  }
-
-  & .article-title-img-wrapper {
-    max-width: 350px;
-  }
 
   & .article-title-wrapper {
-    width: 37%;
+    width: 25%;
+
+    & .article-title-img-wrapper {
+      width: 70%;
+      max-width: 350px;
+    }
+  }
+
+
+  & .article-body {
+    height: 85%;
+  }
+
+
+  & .article-content-wrapper {
+    width: 75%;
+    overflow-y: scroll;
+    max-height: 100%;
+
+    & p {
+      margin-bottom: 0;
+      text-align: center;
+
+      & span {
+        color: rgba(0,0,0,0.3);
+      }
+    }
   }
 }
 
+#outro {
+  @extend %article-wrapper;
+
+  & .article-header {
+    margin-top: auto;
+  }
+
+
+  & .article-footer {
+    margin-top: auto;
+  }
+
+
+  & .article-title-wrapper {
+    width: 27%;
+  }
+
+
+  & .article-title-img-wrapper {
+    max-width: 360px;
+    margin-bottom: 2rem;
+  }
+
+
+  & .article-header-title {
+    font-size: 4.6rem;
+    line-height: 1.2;
+  }
+
+
+  & .article-header-sub-title {
+    font-family: $font-family-work-sans-thin;
+    font-size: 3rem;
+    line-height: 1.2;
+  }
+
+
+  & .article-video {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -1;
+    transform: translateY(-50%) translateX(-50%);
+    //background: url('/img/intro.jpg') no-repeat;
+    background-size: cover;
+  }
+}
 
 
 // footer --------------------------------
