--- a/src/scss/pages/_common.scss
+++ b/src/scss/pages/_common.scss
@@ -255,7 +255,7 @@ h3, .h3 {
 
 #skills {
   @extend %article-wrapper;
-  background-color: rgba(255,255,255,0.7);
+  background: linear-gradient(to right, rgba(255,255,255,0.8) 0%,rgba(255,255,255,0.7) 100%); ;
 
 
   & .article-title-wrapper {
@@ -313,10 +313,22 @@ h3, .h3 {
 #portfolio {
   @extend %article-wrapper;
   background-color: white;
+  position: relative;
 
+  &.fixed-position {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
 
   & .article-title-wrapper {
     width: 25%;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
 
     & .article-title-img-wrapper {
       width: 70%;
@@ -324,16 +336,29 @@ h3, .h3 {
     }
   }
 
-
   & .article-body {
-    height: 85%;
+    height: 100%;
   }
 
+  & .article-header {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  
+
+  & .article-footer {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 
   & .article-content-wrapper {
-    width: 75%;
-    overflow-y: scroll;
+    width: 100%;
     max-height: 100%;
+    overflow-y: hidden;
 
     & p {
       margin-bottom: 0;
@@ -344,13 +369,48 @@ h3, .h3 {
       }
     }
   }
+
+  &.fixed-position .article-content-wrapper {
+      overflow-y: scroll;
+  }
+
+  & .portfolio-item-vendomo {
+    @extend %portfolio-item;
+    background-color: #e6e9f3;
+  }
+
+  & .portfolio-item-foodora {
+    @extend %portfolio-item;
+    background-color: #EFDBE4;
+  }
+
+  & .portfolio-item-bk {
+    @extend %portfolio-item;
+    background-color: #D8CBC7;
+  }
+
+  & .portfolio-item-vendomo-crm {
+    @extend %portfolio-item;
+    background-color: black;
+  }
+
+  &  .portfolio-item-img {
+    margin: auto;
+  }
+}
+
+%portfolio-item {
+  height: 100vh;
+  display: flex;
+  margin-bottom: 0;
+  padding-left: 25%;
 }
 
 // portfolio end --------------------------------
 
 #experience {
   @extend %article-wrapper;
-  background-color: #F7F5E5;
+  background-color: #F3F3F3;
 
 
   & .article-title-wrapper {
@@ -370,7 +430,6 @@ h3, .h3 {
 
   & .article-content-wrapper {
     width: 75%;
-    overflow-y: scroll;
     max-height: 100%;
 
     & p {
@@ -395,43 +454,6 @@ h3, .h3 {
     & .article-title-img-wrapper {
       width: 70%;
       max-width: 300px;
-    }
-  }
-
-
-  & .article-body {
-    height: 85%;
-  }
-
-
-  & .article-content-wrapper {
-    width: 75%;
-    overflow-y: scroll;
-    max-height: 100%;
-
-    & p {
-      margin-bottom: 0;
-      text-align: center;
-
-      & span {
-        color: rgba(0,0,0,0.3);
-      }
-    }
-  }
-}
-
-
-#contact {
-  @extend %article-wrapper;
-  background-color: #E7F3ED;
-
-
-  & .article-title-wrapper {
-    width: 25%;
-
-    & .article-title-img-wrapper {
-      width: 70%;
-      max-width: 350px;
     }
   }
 
@@ -502,10 +524,47 @@ h3, .h3 {
     min-height: 100%;
     width: auto;
     height: auto;
-    z-index: -1;
+    z-index: -2;
     transform: translateY(-50%) translateX(-50%);
     //background: url('/img/intro.jpg') no-repeat;
     background-size: cover;
+  }
+}
+
+
+#contact {
+  @extend %article-wrapper;
+  background-color: #FFF;
+
+
+  & .article-title-wrapper {
+    width: 25%;
+
+    & .article-title-img-wrapper {
+      width: 70%;
+      max-width: 350px;
+    }
+  }
+
+
+  & .article-body {
+    height: 85%;
+  }
+
+
+  & .article-content-wrapper {
+    width: 75%;
+    overflow-y: scroll;
+    max-height: 100%;
+
+    & p {
+      margin-bottom: 0;
+      text-align: center;
+
+      & span {
+        color: rgba(0,0,0,0.3);
+      }
+    }
   }
 }
 
